2011-05-09  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Moved some functions from CLI to common
	files

2011-05-07 Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Ported changes from 3.2 on Recon.
	Full topology recursive discovery and resolution, os_type conditional.

2011-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_agents.php: changed the SQL query for PostgreSQL.
	
	* godmode/agentes/configurar_agente.php: cleaned source code style.

2011-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixed the include the new
	graph engine in the ajax calls.

2011-05-04 Miguel de Dios  <miguel.dedios@artica.es>

	* util/pandora_xml_stress.pl: changed the source code to generate local conf
	for each agent. And in next executions you can change in remote conf in
	Pandora Console Enteprise as real agent.
	
	* util/pandora_xml_stress.README: added confs for the generate local conf.

2011-05-04  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added standby field to be propagated
	in apply policy option

2011-05-03  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added option to disable all the
	alerts of one policy. 
	Updated apply_policy option to use disabled flag
	on the creation and update

2011-05-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm, lib/PandoraFMS/DataServer.pm: Check that a group
	  exists before auto-creating an agent.

2011-04-29 Miguel de Dios  <miguel.dedios@artica.es>

	* util/pandora_xml_stress.pl: added the generate scatter and curve data
	and change the method to create fake modules.
	
	* util/pandora_xml_stress.README: change the description of fake modules.

2011-04-28  Raul Mateos <raulofpandora@gmail.com>

	* conf/pandora_server.conf, pandora_server_installer,