@@ -3,7 +3,7 @@
 # Pandora FMS Server
 # Pandora FMS. the Flexible Monitoring System. http://www.pandorafms.org
 ##########################################################################
-# Copyright (c) 2005-2010 Artica Soluciones Tecnologicas S.L
+# Copyright (c) 2005-2011 Artica Soluciones Tecnologicas S.L
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -187,6 +187,11 @@ if (enterprise_load (\%Config) == 0) {
 	print_message (\%Config, " [*] Pandora FMS Enterprise module not available.", 1);
 } else {
 	print_message (\%Config, " [*] Pandora FMS Enterprise module loaded.", 1);
+}
+
+# Start thread to patrol policy queue
+if ($Config{'pandora_master'} == 1) {
+	my $thr = threads->create('pandora_process_policy_queue', (\%Config));
 }
 
 # Daemonize and put in background
